--- a/crochet.html
+++ b/crochet.html
@@ -9,10 +9,18 @@
 </head>
 <body>
 
-<header>
-    <h1>Cozy Crochet Creations</h1>
-    <p>Handmade with love, just for you!</p>
-</header>
+    <header>
+        <h1>Cozy Crochet Creations</h1>
+        <p>Handmade with love, just for you!</p>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#products">Products</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
 <section>
     <!-- Product 1 -->
@@ -51,3 +59,4 @@
 
 </body>
 </html>
+
