--- a/crochet.html
+++ b/crochet.html
@@ -14,10 +14,10 @@
         <p>Handmade with love, just for you!</p>
         <nav>
             <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#products">Products</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="crochet.html">Home</a></li>
+                <li><a href="crochet.html">Products</a></li>
+                <li><a href="crochet.html">About</a></li>
+                <li><a href="contactcrochet.html">Contact</a></li>
             </ul>
         </nav>
     </header>
